# Interaktives-LLM-get-tztes-Werbesystem

./: .gitignore  BEISPIELANWENDUNG.md  CLAUDE.md  README.md  config.yaml  start.bat
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  main.py  performance.py  security.py
backend/app/agents/: conversation_controller.py  conversation_state.py  dynamic_flow.py  orchestrator.py  state.py
backend/app/agents/nodes/: crawler.py  knowledge.py  matching.py  outreach.py  profile_builder.py  router.py  search.py  template_mgr.py  user_profile.py
backend/app/agents/tools/: web_crawler.py  web_search.py
backend/app/db/: engine.py  models.py  vector_store.py
backend/app/routers/: chat.py  customers.py  dynamic_flow.py  knowledge.py  profile.py  templates.py
backend/app/schemas/: conversation.py
backend/app/services/: llm.py
backend/tests/: test_conversation_state.py  test_dynamic_flow.py  test_flow_simple.py  test_integration.py  test_security.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: http.ts  websocket.ts
frontend/src/components/chat/: ChatInput.tsx  ChatWindow.tsx  DynamicFlow.tsx  ErrorDisplay.tsx  MessageList.tsx  PhaseStepper.tsx  SelectionList.tsx  StatusIndicator.tsx
frontend/src/components/knowledge/: KnowledgePanel.tsx
frontend/src/components/layout/: RightPanel.tsx  Sidebar.tsx
frontend/src/components/profile/: CompanyProfile.tsx  UserProfilePanel.tsx
frontend/src/store/: chatStore.ts
(+1 files in other folders)
